participation-citoyenne/diamadio/k8s/diamadio-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diamadio-client
  namespace: pnud-agvm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diamadio-client
  template:
    metadata:
      labels:
        app: diamadio-client
    spec:
      containers:
      - name: diamadio-client
        image: ${FULL_IMAGE_NAME}
        imagePullPolicy: Always
        ports:
          - containerPort: 4001
            name: http
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: harbor-registry-secret
