participation-citoyenne/diamadio/k8s/diamadio.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diamadio
  namespace: pnud-agvm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diamadio
  template:
    metadata:
      labels:
        app: diamadio
    spec:
      containers:
      - name: diamadio
        image: ${FULL_IMAGE_NAME}
        imagePullPolicy: Always
        ports:
        - containerPort: 4001
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 4001            # ou "http" si vous préférez le nom du port
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 4001            # ou "http"
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
      imagePullSecrets:
      - name: harbor-registry-secret
